--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-# docker-compose.dev.yml
+# docker-compose.yml
 services:
   ampsassist:
     build: .
@@ -6,5 +6,9 @@ services:
     restart: unless-stopped
     volumes:
       - ./downloads:/app/downloads
+      - ./oauth.json:/app/oauth.json
     environment:
       - TZ=Australia/Sydney # Ensures your 30-minute scheduler runs on your local time
+      - YTM_CLIENT_ID=${YTM_CLIENT_ID}
+      - YTM_CLIENT_SECRET=${YTM_CLIENT_SECRET}
+      - PYTHONUNBUFFERED=1 # Ensures real-time logging in Docker
